[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Wheel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/Car/RedCar.png" type="Texture" id=2]
[ext_resource path="res://Code/Player.gd" type="Script" id=3]
[ext_resource path="res://Images/Characters/Body2.png" type="Texture" id=4]
[ext_resource path="res://Images/Characters/Head2.png" type="Texture" id=5]
[ext_resource path="res://Audio/EngineSound.ogg" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 62.1691

[node name="Player" type="RigidBody2D" groups=["player"]]
collision_layer = 2
gravity_scale = 30.0
script = ExtResource( 3 )

[node name="WheelHolder" type="PinJoint2D" parent="."]
position = Vector2( -151, 89 )
node_a = NodePath("..")
node_b = NodePath("Wheel")
softness = 2.66

[node name="Wheel" parent="WheelHolder" instance=ExtResource( 1 )]
position = Vector2( -1, -2 )

[node name="WheelHolder2" type="PinJoint2D" parent="."]
position = Vector2( 110, 83 )
node_a = NodePath("..")
node_b = NodePath("Wheel")
softness = 2.66

[node name="Wheel" parent="WheelHolder2" instance=ExtResource( 1 )]
position = Vector2( -1, -2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -54, -56 )
texture = ExtResource( 4 )

[node name="Car" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -226, -46, -226, 101, -226, 101, 224, 101, 224, 101, 224, 101, 221, -15, 220, -16, 43, -82, 39, -85, -231, -90, -230, -90 )

[node name="GameOver" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Head" type="RigidBody2D" parent="." groups=["player"]]
position = Vector2( -65, -126 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Head"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 1 )

[node name="HeadSpring" type="PinJoint2D" parent="Head"]
node_a = NodePath("..")
node_b = NodePath("../..")
softness = 10.0

[node name="NeckJoint" type="PinJoint2D" parent="Head"]
position = Vector2( 6, 64 )
node_a = NodePath("..")
node_b = NodePath("../..")
softness = 1.0

[node name="Engine" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="MovingEngine" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="GameOver" to="." method="_on_GameOver_timeout"]
